--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>LG전자</title>
 	<link rel="stylesheet" href="../CSS/all.min.css">
+	<link rel="stylesheet" href="../css/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="../CSS/base.css">
 	<link rel="stylesheet" href="../CSS/index.css">
+	<script src="../js/jquery-3.6.0.min.js"></script>
+	<script src="../js/swiper-bundle.min.js"></script>
 </head>
 <body>
 	<!-- .header-wrapper -->
@@ -28,90 +31,445 @@
 					<li class="navi"><a href="#">LG ThinQ</a></li>
 					<li class="navi">
 						<a href="#">LG SIGNATURE</a>
-						<div class="sub-wrap">
-
+						<div class="sub-wrapper">
+							<div class="wrapper2 clearfix">
+								<div class="sub-title disp-table">
+									<div class="disp-cell">
+										<img src="../img/navi01.png" alt="brand">
+										<h2><a href="#">초프리미엄 가전<br><span>LG SIGNATURE</span></a></h2>
+									</div>
+								</div>
+								<div class="sub-wrap sub-signature">
+									<div>
+										<div class="sub-navi"><a href="#">제품정보</a></div>
+										<div class="sub-prd">
+											<a href="#">올레드 TV</a>
+											<ul class="clearfix">
+												<li class="prd"><a href="#">ORED R</a></li>
+												<li class="prd"><a href="#">ORED 8K</a></li>
+												<li class="prd"><a href="#">ORED W</a></li>
+											</ul>
+										</div>
+										<div class="sub-prd">
+											<a href="#">냉장고</a>
+											<ul class="clearfix">
+												<li class="prd"><a href="#">정수기형</a></li>
+												<li class="prd"><a href="#">상냉장/하냉동</a></li>
+												<li class="prd"><a href="#">와인셀러</a></li>
+											</ul>
+										</div>
+										<div class="sub-prd"><a href="#">세탁기</a></div>
+										<div class="sub-prd"><a href="#">냉장고</a></div>
+										<div class="sub-prd"><a href="#">가습 공기청정기</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">아트가이드</a></div>
+										<div class="sub-navi"><a href="#">쇼룸</a></div>
+										<div class="sub-navi"><a href="#">테마영상</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">브랜드스토리</a></div>
+										<div class="sub-navi"><a href="#">사진전</a></div>
+										<div class="sub-navi"><a href="#">수상내역</a></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</li>
-					<li class="navi"><a href="#">LG Objet Collection</a>
+					<li class="navi">
+						<a href="#">LG Objet Collection</a>
 					</li>
 					<li class="navi">
 						<a href="#">TV/AV</a>
-						<div class="sub-wrap">
-							rkskdsk
+						<div class="sub-wrapper">
+							<div class="wrapper2 clearfix">
+								<div class="sub-title disp-table">
+									<div class="disp-cell">
+										<img src="../img/navi02.png" alt="brand">
+										<h2><a href="#">차원이 다른<br><img src="../img/oledtv.png" alt="title"></a></h2>
+									</div>
+								</div>
+								<div class="sub-wrap sub-tv">
+									<div>
+										<div class="sub-navi"><a href="#">TV</a></div>
+										<div class="sub-prd"><a href="#">올레드 TV</a></div>
+										<div class="sub-prd"><a href="#">나노셀 TV</a></div>
+										<div class="sub-prd"><a href="#">울트라 HD TV</a></div>
+										<div class="sub-prd"><a href="#">일반 LED TV</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">프로젝터</a></div>
+										<div class="sub-prd"><a href="#">초단초점</a></div>
+										<div class="sub-prd"><a href="#">투사형</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">AV</a></div>
+										<div class="sub-prd"><a href="#">사운드바</a></div>
+										<div class="sub-prd"><a href="#">무선 스피커</a></div>
+										<div class="sub-prd"><a href="#">블루투스 이어폰(톤 프리)</a></div>
+										<div class="sub-prd"><a href="#">오디오/플레이어</a></div>
+										<div class="sub-bookmark"><a href="#">LG Objet 오디오 <i class="fa fa-bookmark"></i></a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">TV/AV콘텐츠</a></div>
+										<div class="sub-prd"><a href="#">리뷰</a></div>
+										<div class="sub-prd"><a href="#">가이드</a></div>
+										<div class="sub-prd"><a href="#">광고/홍보</a></div>
+										<div class="sub-prd sub-mt"><a href="#">시네빔 화질체험존</a></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</li>
 					<li class="navi">
 						<a href="#">PC/모니터</a>
-						<div class="sub-wrap">
-							fdfdfdf
+						<div class="sub-wrapper">
+							<div class="wrapper2 clearfix">
+								<div class="sub-title disp-table">
+									<div class="disp-cell">
+										<img src="../img/navi03.png" alt="brand">
+										<h2><a href="#">세상의 상식을 그램하다<br><span class="pink">LG gram</span></a></h2>
+									</div>
+								</div>
+								<div class="sub-wrap sub-gram">
+									<div>
+										<div class="sub-navi"><a href="#">노트북</a></div>
+										<div class="sub-prd"><a href="#">그램</a></div>
+										<div class="sub-prd"><a href="#">울트라 기어</a></div>
+										<div class="sub-prd"><a href="#">울트라 PC</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">일체형 PC</a></div>
+										<div class="sub-navi"><a href="#">데스크톱</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">모니터</a></div>
+										<div class="sub-prd"><a href="#">울트라기어 게이밍 모니터</a></div>
+										<div class="sub-prd"><a href="#">울트라와이드 모니터</a></div>
+										<div class="sub-prd"><a href="#">울트라HD 모니터</a></div>
+										<div class="sub-prd"><a href="#">PC모니터</a></div>
+										<div class="sub-prd"><a href="#">TV모니터</a></div>
+										<div class="sub-prd"><a href="#">IPTV모니터</a></div>
+										<div class="sub-prd sub-mt"><a href="#">360 모니터</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">PC/모니터 컨텐츠</a></div>
+										<div class="sub-prd"><a href="#">리뷰</a></div>
+										<div class="sub-prd"><a href="#">가이드</a></div>
+										<div class="sub-prd"><a href="#">광고/홍보</a></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</li>
 					<li class="navi">
 						<a href="#">주방가전</a>
-						<div class="sub-wrap">
-
-							</div
+						<div class="sub-wrapper">
+							<div class="wrapper2 clearfix">
+								<div class="sub-title disp-table">
+									<div class="disp-cell">
+										<img src="../img/navi04.png" alt="brand">
+										<h2><a href="#">1등답게, 디오스가 새로움을 OPEN<br><span>LG DIOS 얼음정수기냉장고</span></a></h2>
+									</div>
+								</div>
+								<div class="sub-wrap sub-kitchen">
+									<div>
+										<div class="sub-navi"><a href="#">냉장고</a></div>
+										<div class="sub-prd"><a href="#">정수기형</a></div>
+										<div class="sub-prd"><a href="#">상냉장/하냉동</a></div>
+										<div class="sub-prd"><a href="#">양문형</a></div>
+										<div class="sub-prd"><a href="#">일반형</a></div>
+										<div class="sub-prd"><a href="#">비즈니스</a></div>
+										<div class="sub-prd"><a href="#">와인셀러</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">김치냉장고</a></div>
+										<div class="sub-prd"><a href="#">스탠드형</a></div>
+										<div class="sub-prd"><a href="#">뚜껑식형</a></div>
+										<div class="sub-prd"><a href="#">프리스타일</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">정수기</a></div>
+										<div class="sub-navi"><a href="#">맥주 제조기</a></div>
+										<div class="sub-navi"><a href="#">식기세척기</a></div>
+										<div class="sub-navi"><a href="#">광파오븐</a></div>
+										<div class="sub-navi"><a href="#">전자레인지</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">전기레인지</a></div>
+										<div class="sub-navi"><a href="#">빌트인가전</a></div>
+										<div class="sub-navi"><a href="#">시그니처 키친 스위트</a></div>
+									</div>
+									<div>
+										<div class="sub-navi"><a href="#">주방가전컨텐츠</a></div>
+										<div class="sub-prd"><a href="#">리뷰</a></div>
+										<div class="sub-prd"><a href="#">펀&이슈</a></div>
+										<div class="sub-prd"><a href="#">가이드</a></div>
+										<div class="sub-prd"><a href="#">광고/홍보</a></div>
+										<div class="sub-prd sub-mt"><a href="#">나의 케어솔루션</a></div>
+										<div class="sub-prd sub-mt"><a href="#">케어솔루션 바로가기</a></div>
+									</div>
+								</div>
+							</div>
+						</div> 
 					</li>
 					<li class="navi">
 						<a href="#">생활가전</a>
-						<div class="sub-wrap">
-
-							</div
+						<div class="sub-wrapper"></div>
 					</li>
 					<li class="navi">
-						<a href="#">에어컨/에어케어</a>
-						<div class="sub-wrap">
-
-							</div
+						<a href="#">에어컨/에어케어</a><div class="sub-wrapper"></div>
 					</li>
 					<li class="navi">
-						<a href="#">모바일</a>
-						<div class="sub-wrap">
-
-							</div
+						<a href="#">모바일</a><div class="sub-wrapper"></div>
 					</li>
 					<li class="navi">
-						<a href="#">뷰티/의료기기</a>
-						<div class="sub-wrap">
-
-							</div
+						<a href="#">뷰티/의료기기</a><div class="sub-wrapper"></div>
 					</li>
 					<li class="navi"><a href="#"><i class="fa fa-search"></i></a></li>
 					<li class="navi"> <span>|</span> <a href="#">B2B</a></li>
 				</ul>
+				<div class="mb-navi-wrap">
+					<a href="#" class="fa fa-user"></a>
+					<a href="#" class="fa fa-sign-in-alt"></a>
+					<a href="#" class="fa fa-bars"></a>
+				</div>
 			</div>
 		</nav>
 		<nav class="navi-wrapper2 "> 
 			<div class="wrapper clearfix">
-				가나다라
-				
+				<ul class="icon-wrap">
+					<li class="icon">
+						<a href="#" alt="아이콘"><img src="../img/icon01.png" alt="아이콘"> 케이솔루션</a>
+					</li>
+					<li class="icon">
+						<a href="#" alt="아이콘"><img src="../img/icon02.png" alt="아이콘"> 베스트샵</a>
+					</li>
+					<li class="icon">
+						<a href="#" alt="아이콘"><img src="../img/icon03.png" alt="아이콘"> 온라인몰</a>
+					</li>
+					<li class="icon">
+						<a href="#" alt="아이콘"><img src="../img/icon04.png" alt="아이콘"> 매장 상담 신청</a>
+					</li>
+					<li class="icon">
+						<a href="#"><span>.</span>이벤트</a>
+					</li>
+					<li class="icon">
+						<a href="#"><span>.</span>멤버십</a>
+					</li>
+					<li class="icon">
+						<a href="#"><span>.</span>고객서비스/케이용품샵</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
-
 	</header>
 	<!-- .header-wrapper // -->
 
 	<!-- .main-wrapper -->
 	<section class="main-wrapper">
-		<!-- .main-wrapper //-->
-
+		<div class="swiper-container">
+			<div class="slide-wrapper swiper-wrapper">
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">에어컨을 넘어 <br>에어 퀄리티 시대를 여는</div>
+						<div class="brand"><img src="../img/title01.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">차원이 다른 <br>무선청소기</div>
+						<div class="brand"><img src="../img/title02.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">세상의 상식을 <br>그램하다</div>
+						<div class="brand"><img src="../img/title03.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">처음 만나는 <br>공간인테리어 가전</div>
+						<div class="brand"><img src="../img/title04.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">혁신의 정점, 作.</div>
+						<div class="brand"><img src="../img/title05.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="brand"><img src="../img/title06.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">
+							<p>당신의 건강까지 지켜주는</p>
+							<p>진짜 스타일러는 스타일러 뿐입니다.</p>
+						</div>
+						<div class="brand"><img src="../img/title07.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">
+							<p>김치톡톡만의 20년 노하우</p>
+							<p>초정밀 냉기 테크놀로지</p>
+						</div>
+						<div class="brand"><img src="../img/title08.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">돌리면 보이는 새로움</div>
+						<div class="brand"><img src="../img/title09.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+				<div class="slide swiper-slide">
+					<div class="content">
+						<div class="slogan">식기를 씻는 것, <br>그 이상의 깨끗함</div>
+						<div class="brand"><img src="../img/title10.png" alt="title" class="imgx"></div>
+						<button class="bt-link angle-rt">자세히보기</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="swiper-pagination"></div>
+		<!-- <div class="pager-wrapper">
+			<a href="#" class = "pager active"></a>
+			<a href="#" class = "pager"></a>
+			<a href="#" class = "pager"></a>
+			<a href="#" class = "pager"></a>
+			<a href="#" class = "pager"></a>
+			<a href="#" class = "pager"></a>
+			<a href="#" class="bt-play fa fa-play active" ></a>
+			<a href="#" class="bt-pause fa fa-pause"></a>
+		</div> -->
 	</section>
+	<!-- .main-wrapper //-->
 
 	<!-- .link-wrapper -->
-	<section class="link-wrapper">
-
+	<section class="link-wrapper wrapper3">
+		<ul class="link-wrap clearfix">
+			<li><img src="../img/link01.jpg" alt="링크 이미지" class="img"></li>
+			<li><img src="../img/link02.jpg" alt="링크 이미지" class="img"></li>
+			<li><img src="../img/linke03.jpg" alt="링크 이미지" class="img"></li>
+		</ul>
+		<ul class="link-wrap clearfix">
+			<li><img src="../img/linke04.jpg" alt="링크 이미지" class="img"></li>
+			<li><img src="../img/linke05.jpg" alt="링크 이미지" class="img"></li>
+		</ul>
 	</section>
 	<!-- .link-wrapper //-->
 
 	<!-- .best-wrapper -->
-	<section class="best-wrapper">
-
+	<section class="best-wrapper wrapper3" >
+		<h3 class="title-wrapper">
+			<img src="../img/bestseller_title.jpg" alt="베스트셀러 제목" class="imgx">
+		</h3>
+		<div class="slide-wrapper">
+			<div class="slide-stage swiper-container">
+				<div class="slide-wrap swiper-wrapper">
+					<!-- ul.slide*4>li>img.imgx^div>h4.best-title+p.best-cont -->
+					<ul class="slide swiper-slide">
+						<li>
+							<div><img src="../img/best01.jpg" alt="" class="imgx"></div>
+						</li>
+						<div>
+							<h4 class="best-title">LG 그램 16</h4>
+							<p class="best-cont">16Z90P-GA50K</p>
+						</div>
+					</ul>
+					<ul class="slide swiper-slide">
+						<li><div><img src="../img/best02.jpg" alt="" class="imgx"></div>
+						</li>
+						<div>
+							<h4 class="best-title">LG WING</h4>
+							<p class="best-cont">LM-F100N</p>
+						</div>
+					</ul>
+					<ul class="slide swiper-slide">
+						<li><div><img src="../img/best03.jpg" alt="" class="imgx"></div>
+						</li>
+						<div>
+							<h4 class="best-title">LG 올레드 evo</h4>
+							<p class="best-cont">OLED77G1KNA</p>
+						</div>
+					</ul>
+					<ul class="slide swiper-slide">
+						<li>
+							<div><img src="../img/best04.jpg" alt="" class="imgx"></div>
+						</li>
+						<div>
+							<h4 class="best-title">LG 오브제컬렉션 스타일러</h4>
+							<p class="best-cont">S3BOF</p>
+						</div>
+						</ul>
+					<ul class="slide swiper-slide">
+						<li>
+							<div><img src="../img/best05.jpg" alt="" class="imgx"></div>
+						</li>
+						<div>
+							<h4 class="best-title">스팀 건조기</h4>
+							<p class="best-cont">ThinQ</p>
+						</div>
+						<ul class="slide swiper-slide">
+							<li>
+								<div><img src="../img/best06.jpg" alt="" class="imgx"></div>
+							</li>
+							<div>
+								<h4 class="best-title">LG 오브제컬렉션 상하좌우 정수기</h4>
+							<p class="best-cont">WD503ACB</p>
+							</div>
+						</ul>
+						<ul class="slide swiper-slide">
+							<li>
+								<div><img src="../img/best07.jpg" alt="" class="imgx"></div>
+							</li>
+							<div>
+								<h4 class="best-title">LG 퓨리케어 360˚ 공기청정기 플러스</h4>
+								<p class="best-cont">AS301DWFA</p>
+							</div>
+						</ul>
+						<ul class="slide swiper-slide">
+							<li>
+								<div><img src="../img/best08.jpg" alt="" class="imgx"></div>
+							</li>
+							<div>
+								<h4 class="best-title">LG 오브제컬렉션 청소기</h4>
+								<p class="best-cont">AO9571WKT</p>
+							</div>
+						</ul>
+					</div>
+				</div>
+			<div class="swiper-pagination"></div>
+			<div class="bt bt-prev">〈</div>
+			<div class="bt bt-next">〉</div>
+			<!-- <div class="pager-wrapper">
+				<a href="#" class="pager active"></a>
+				<a href="#" class="pager"></a>
+				<a href="#" class="pager"></a>
+			</div> -->
+		</div>
 	</section>
 	<!-- .best-wrapper// -->
 
 	<!-- .event-wrapper -->
-	<section class="event-wrapper">
-
+	<section class="evt-wrapper">
+		<div class="wrapper3"></div>
 	</section>
 	<!-- .event-wrapper// -->
 
@@ -126,6 +484,6 @@
 
 	</footer>
 	<!-- .footer-wrapper // -->
-
+	<script src="../js/index.js"></script>
 </body>
 </html>
