--- a/html/03.16.LG.html
+++ b/html/03.16.LG.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-	<!-- header_wrapper -->
+	<!-- .header_wrapper -->
 	<header class="header_wrapper">
 		<div class="top_wrapper">
 			<div class="wrapper clearfix">
@@ -416,11 +416,46 @@
 
 		<nav class="navi_wrapper2">
 			<div class="wrapper clearfix">
-			
+				<ul class="icon_wrap">
+					<li class="icon">
+						<a href="#"><img src="../img/icon01.png" alt="아이콘">케어솔루션</a>
+					</li>
+					<li class="icon">
+						<a href="#"><img src="../img/icon02.png" alt="아이콘">베스트샵</a>
+					</li>
+					<li class="icon">
+						<a href="#"><img src="../img/icon03.png" alt="아이콘">온라인몰</a>
+					</li>
+					<li class="icon">
+						<a href="#"><img src="../img/icon04.png" alt="아이콘">매장 상담 신청</a>
+					</li>
+					<li class="icon">
+						<a href="#"><span>·</span>이벤트</a>
+					</li>
+					<li class="icon">
+						<a href="#"><span>·</span>멤버십</a>
+					</li>
+					<li class="icon">
+						<a href="#"><span>·</span>고객서비스/케이용품샵</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 	</header>
-	<!-- header_wrapper// -->
-	
+	<!-- .header_wrapper // -->
+
+	<!-- .main_wrapper -->
+	<section class="main_wrapper">
+		<div class="slide_wrapper">
+			<div class="slide">
+				<div class="content">
+					<div class="slogan">에어컨을 넘어<br> 에어 퀄리티 시대를 여는</div>
+					<div class="brand"><img src="../img/title01.png" alt="title" class="imgx"></div>
+					<button class="bt_link angle_rt">자세히보기</button>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- .main_wrapper // -->
 </body>
 </html>
